--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="contenedor">
+            <nav class="menu">
+				<a href="#" id="btn-acerca-de">Acerca de</a>
+				<a href="#" id="btn-menu">Menu</a>
+				<a href="#" id="btn-galeria">Galeria</a>
+				<a href="#" id="btn-ubicacion">Ubicacion</a>
+			</nav>
+        </div>
+    </header>
     <script src="./js/jquery-3.1.1.min.js"></script>
 </body>
 </html>
