--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 				<a href="#" id="btn-ubicacion">Ubicacion</a>
 			</nav>
         </div>
+        <div class="textos">
+            <h1 class="nombre">Cafe <span>FalconMasters</span></h1>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+        </div>
     </header>
     <script src="./js/jquery-3.1.1.min.js"></script>
 </body>
