--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
         </div>
     </header>
+    <section class="main">
+		<section class="acerca-de" id="acerca-de">
+			<div class="contenedor">
+				<div class="foto">
+					<img src="img/acerca-de.jpg" alt="">
+				</div>
+				
+		</section>
     <script src="./js/jquery-3.1.1.min.js"></script>
 </body>
 </html>
