--- a/index.html
+++ b/index.html
@@ -53,7 +53,33 @@
             <h3 class="titulo" id="platillos">Menu</h3>
             <div class="contenedor-menu">
                 <div class="contenedor-menu2">
-                  
+                    <article>
+                        <p class="categoria">De Comer</p>
+                        <div class="platillo">
+                            <p class="nombre">Sed sagittis nisl dictum</p>
+                            <p class="precio">$15</p>
+                            <p class="descripcion">Praesent gravida, augue sit amet dignissim rutrum, 
+                            enim tellus suscipit risus.</p>
+                        </div>
+                        <div class="platillo">
+                            <p class="nombre">Lorem ipsum dolor sit amet</p>
+                            <p class="precio">$10</p>
+                            <p class="descripcion">Vestibulum ac sem id massa tempor vestibulum sed 
+                            ut magna</p>
+                        </div>
+                        <div class="platillo">
+                            <p class="nombre">Sed sagittis nisl dictum</p>
+                            <p class="precio">$20</p>
+                            <p class="descripcion">Praesent gravida, augue sit amet dignissim rutrum, 
+                            enim tellus suscipit risus.</p>
+                        </div>
+                        <div class="platillo">
+                            <p class="nombre">Sed sagittis nisl dictum</p>
+                            <p class="precio">$35</p>
+                            <p class="descripcion">Praesent gravida, augue sit amet dignissim rutrum, 
+                            enim tellus suscipit risus.</p>
+                        </div>
+                    </article>
 
                     
                 </div>
