--- a/index.html
+++ b/index.html
@@ -81,7 +81,33 @@
                         </div>
                     </article>
 
-                    
+                    <article>
+                        <p class="categoria">De Tomar</p>
+                        <div class="platillo">
+                            <p class="nombre">Sed sagittis nisl dictum</p>
+                            <p class="precio">$15</p>
+                            <p class="descripcion">Praesent gravida, augue sit amet dignissim rutrum, 
+                            enim tellus suscipit risus.</p>
+                        </div>
+                        <div class="platillo">
+                            <p class="nombre">Sed sagittis nisl dictum</p>
+                            <p class="precio">$15</p>
+                            <p class="descripcion">Praesent gravida, augue sit amet dignissim rutrum, 
+                            enim tellus suscipit risus.</p>
+                        </div>
+                        <div class="platillo">
+                            <p class="nombre">Sed sagittis nisl dictum</p>
+                            <p class="precio">$15</p>
+                            <p class="descripcion">Praesent gravida, augue sit amet dignissim rutrum, 
+                            enim tellus suscipit risus.</p>
+                        </div>
+                        <div class="platillo">
+                            <p class="nombre">Sed sagittis nisl dictum</p>
+                            <p class="precio">$15</p>
+                            <p class="descripcion">Praesent gravida, augue sit amet dignissim rutrum, 
+                            enim tellus suscipit risus.</p>
+                        </div>
+                    </article>
                 </div>
             </div>
         </div>
