--- a/index.html
+++ b/index.html
@@ -138,6 +138,22 @@
             <img src="img/8.jpg" alt="">
         </div>
     </section>
+    <section class="ubicacion" id="ubicacion">
+        <div class="contenedor">
+            <h3 class="titulo">Ubicacion</h3>
+            <div class="direccion">
+                <p class="calle">2915 Primrose Lane<br />Anaheim, CA 92806</p><br>
+                <p class="telefono">(503) 400-5479</p>
+                <p class="correo">correo [arroba] tucorreo.com</p>
+            </div>
+
+            <div class="horarios">
+                <h4>Horarios</h4>
+                <p class="entre-semana">Lunes a Viernes <br> 8:00am - 9:00pm</p>
+                <p class="fin-semana">Sabados y Domingos <br> 11:00am - 11:00pm</p>
+            </div>
+        </div>
+    </section>
     <script src="./js/jquery-3.1.1.min.js"></script>
   </body>
 </html>
