--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <title>Cafe | Genarogg</title>
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -21,7 +22,7 @@
         </nav>
 
         <div class="textos">
-          <h1 class="nombre">Cafe <span>FalconMasters</span></h1>
+          <h1 class="nombre">Cafe <span>Genarogg</span></h1>
           <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
         </div>
       </div>
@@ -200,5 +201,11 @@
       </div>
     </footer>
     <script src="./js/jquery-3.1.1.min.js"></script>
+    <script src="./js/main.js"></script>
+
+    <div id="buttonBrand"></div>
+    <!--Carga de script-->
+    <script src='https://genarogg.github.io/link-To-my-brand/js/main.js'></script>
+
   </body>
 </html>
